# G-Tree

./: BuildGTreeCPU.cpp  BuildGTreeCPU.h  CMakeLists.txt  README.md  cudaFun.cu  cudaFun.h  generator.py  main.cpp  range_query.cu  readcsv.cpp
